[metadata]
name = pystrf
version = 0.0.1
author = Cees Bassa
description = Python based radio frequency satellite tracking
long_description = file: README.md
long_description_content_type: text/markdown
keywords = strf, sat, satellite, ham
license = GPLv3
url = https://github.com/cbassa/pystrf
project_urls =
    Bug Tracker = https://github.com/cbassa/pystrf
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Environment :: X11 Applications
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Communications :: Ham Radio

[options]
package_dir =
    = src/
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib(>=3.5.2)
    skyfield(>=1.42)

[options.packages.find]
where = src/

[options.entry_points]
console_scripts =
    rfplot = rfplot.rfplot:main
